--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap");
 
 /*
-! tailwindcss v3.4.10 | MIT License | https://tailwindcss.com
+! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -34,11 +34,9 @@
 4. Use the user's configured `sans` font-family by default.
 5. Use the user's configured `sans` font-feature-settings by default.
 6. Use the user's configured `sans` font-variation-settings by default.
-7. Disable tap highlights on iOS
 */
 
-html,
-:host {
+html {
   line-height: 1.5;
   /* 1 */
   -webkit-text-size-adjust: 100%;
@@ -48,14 +46,12 @@ html,
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
   font-variation-settings: normal;
   /* 6 */
-  -webkit-tap-highlight-color: transparent;
-  /* 7 */
 }
 
 /*
@@ -127,10 +123,8 @@ strong {
 }
 
 /*
-1. Use the user's configured `mono` font-family by default.
-2. Use the user's configured `mono` font-feature-settings by default.
-3. Use the user's configured `mono` font-variation-settings by default.
-4. Correct the odd `em` font sizing in all browsers.
+1. Use the user's configured `mono` font family by default.
+2. Correct the odd `em` font sizing in all browsers.
 */
 
 code,
@@ -139,12 +133,8 @@ samp,
 pre {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   /* 1 */
-  font-feature-settings: normal;
-  /* 2 */
-  font-variation-settings: normal;
-  /* 3 */
   font-size: 1em;
-  /* 4 */
+  /* 2 */
 }
 
 /*
@@ -213,8 +203,6 @@ textarea {
   /* 1 */
   line-height: inherit;
   /* 1 */
-  letter-spacing: inherit;
-  /* 1 */
   color: inherit;
   /* 1 */
   margin: 0;
@@ -238,9 +226,9 @@ select {
 */
 
 button,
-input:where([type='button']),
-input:where([type='reset']),
-input:where([type='submit']) {
+[type='button'],
+[type='reset'],
+[type='submit'] {
   -webkit-appearance: button;
   /* 1 */
   background-color: transparent;
@@ -555,10 +543,6 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
-  --tw-contain-size:  ;
-  --tw-contain-layout:  ;
-  --tw-contain-paint:  ;
-  --tw-contain-style:  ;
 }
 
 ::backdrop{
@@ -609,10 +593,6 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
-  --tw-contain-size:  ;
-  --tw-contain-layout:  ;
-  --tw-contain-paint:  ;
-  --tw-contain-style:  ;
 }
 
 .container{
@@ -702,7 +682,7 @@ video {
   padding: 0.875rem;
 }
 
-.nav-container:is(.dark *){
+:is(.dark .nav-container){
   --tw-border-opacity: 1;
   border-color: rgb(39 41 47 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
@@ -732,7 +712,7 @@ video {
   color: rgb(42 134 254 / var(--tw-text-opacity));
 }
 
-.nav-brand:is(.dark *){
+:is(.dark .nav-brand){
   --tw-text-opacity: 1;
   color: rgb(42 134 254 / var(--tw-text-opacity));
 }
@@ -764,7 +744,7 @@ video {
   background-color: rgb(235 235 235 / var(--tw-bg-opacity));
 }
 
-.nav-icon:hover:is(.dark *){
+:is(.dark .nav-icon:hover){
   --tw-bg-opacity: 1;
   background-color: rgb(39 41 47 / var(--tw-bg-opacity));
 }
@@ -803,7 +783,7 @@ video {
   color: rgb(10 10 18 / var(--tw-text-opacity));
 }
 
-.sidebar-container:is(.dark *){
+:is(.dark .sidebar-container){
   --tw-border-opacity: 1;
   border-color: rgb(39 41 47 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
@@ -846,7 +826,7 @@ video {
   background-color: rgb(235 235 235 / var(--tw-bg-opacity));
 }
 
-.container-sidebar-icon:hover:is(.dark *){
+:is(.dark .container-sidebar-icon:hover){
   --tw-bg-opacity: 1;
   background-color: rgb(39 41 47 / var(--tw-bg-opacity));
 }
@@ -916,7 +896,7 @@ video {
   opacity: 0.2;
 }
 
-.hr:is(.dark *){
+:is(.dark .hr){
   --tw-border-opacity: 1;
   border-color: rgb(214 215 216 / var(--tw-border-opacity));
 }
@@ -991,20 +971,16 @@ video {
   right: 5px;
 }
 
+.top-0{
+  top: 0px;
+}
+
 .top-1\/2{
   top: 50%;
 }
 
-.top-\[-20px\]{
-  top: -20px;
-}
-
 .top-\[61px\]{
   top: 61px;
-}
-
-.top-0{
-  top: 0px;
 }
 
 .-z-10{
@@ -1203,8 +1179,16 @@ video {
   height: 4rem;
 }
 
+.h-2{
+  height: 0.5rem;
+}
+
 .h-2\.5{
   height: 0.625rem;
+}
+
+.h-28{
+  height: 7rem;
 }
 
 .h-32{
@@ -1291,32 +1275,16 @@ video {
   height: 100vh;
 }
 
-.h-11{
-  height: 2.75rem;
-}
-
-.h-28{
-  height: 7rem;
-}
-
-.h-24{
-  height: 6rem;
-}
-
-.h-20{
-  height: 5rem;
-}
-
 .max-h-\[70px\]{
   max-height: 70px;
 }
 
-.min-h-1{
-  min-height: 0.25rem;
-}
-
 .w-1\/2{
   width: 50%;
+}
+
+.w-1\/4{
+  width: 25%;
 }
 
 .w-10{
@@ -1333,6 +1301,10 @@ video {
 
 .w-16{
   width: 4rem;
+}
+
+.w-2{
+  width: 0.5rem;
 }
 
 .w-2\.5{
@@ -1399,6 +1371,10 @@ video {
   width: 365px;
 }
 
+.w-\[432px\]{
+  width: 432px;
+}
+
 .w-\[50px\]{
   width: 50px;
 }
@@ -1417,54 +1393,6 @@ video {
 
 .w-screen{
   width: 100vw;
-}
-
-.w-32{
-  width: 8rem;
-}
-
-.w-40{
-  width: 10rem;
-}
-
-.w-56{
-  width: 14rem;
-}
-
-.w-\[502px\]{
-  width: 502px;
-}
-
-.w-\[382px\]{
-  width: 382px;
-}
-
-.w-1\/5{
-  width: 20%;
-}
-
-.w-1\/4{
-  width: 25%;
-}
-
-.w-\[402px\]{
-  width: 402px;
-}
-
-.w-\[422px\]{
-  width: 422px;
-}
-
-.w-\[442px\]{
-  width: 442px;
-}
-
-.w-\[432px\]{
-  width: 432px;
-}
-
-.w-2\/5{
-  width: 40%;
 }
 
 .max-w-7xl{
@@ -1537,12 +1465,12 @@ video {
   cursor: auto;
 }
 
-.cursor-pointer{
-  cursor: pointer;
-}
-
 .cursor-default{
   cursor: default;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .resize-none{
@@ -1648,6 +1576,10 @@ video {
   border-radius: 1rem;
 }
 
+.rounded-\[4px\]{
+  border-radius: 4px;
+}
+
 .rounded-\[inherit\]{
   border-radius: inherit;
 }
@@ -1670,10 +1602,6 @@ video {
 
 .rounded-xl{
   border-radius: 0.75rem;
-}
-
-.rounded-\[4px\]{
-  border-radius: 4px;
 }
 
 .border{
@@ -1783,6 +1711,11 @@ video {
   background-color: rgb(23 24 28 / var(--tw-bg-opacity));
 }
 
+.bg-d-danger{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 66 66 / var(--tw-bg-opacity));
+}
+
 .bg-d-primary{
   --tw-bg-opacity: 1;
   background-color: rgb(30 31 36 / var(--tw-bg-opacity));
@@ -1816,11 +1749,6 @@ video {
 .bg-red-800{
   --tw-bg-opacity: 1;
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
-}
-
-.bg-d-danger{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 66 66 / var(--tw-bg-opacity));
 }
 
 .bg-cover{
@@ -2110,6 +2038,11 @@ video {
   color: rgb(42 134 254 / var(--tw-text-opacity));
 }
 
+.text-d-danger{
+  --tw-text-opacity: 1;
+  color: rgb(255 66 66 / var(--tw-text-opacity));
+}
+
 .text-d-text{
   --tw-text-opacity: 1;
   color: rgb(214 215 216 / var(--tw-text-opacity));
@@ -2155,11 +2088,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-d-danger{
-  --tw-text-opacity: 1;
-  color: rgb(255 66 66 / var(--tw-text-opacity));
-}
-
 .underline{
   text-decoration-line: underline;
 }
@@ -2190,10 +2118,6 @@ video {
 
 .opacity-90{
   opacity: 0.9;
-}
-
-.opacity-30{
-  opacity: 0.3;
 }
 
 .shadow-2xl{
@@ -2297,7 +2221,7 @@ video {
   color: rgb(10 10 18 / var(--tw-text-opacity));
 }
 
-.dynamic-text:is(.dark *){
+:is(.dark .dynamic-text){
   --tw-text-opacity: 1;
   color: rgb(214 215 216 / var(--tw-text-opacity));
 }
@@ -2307,7 +2231,7 @@ video {
   background-color: rgb(248 248 253 / var(--tw-bg-opacity));
 }
 
-.dynamic-primary:is(.dark *){
+:is(.dark .dynamic-primary){
   --tw-bg-opacity: 1;
   background-color: rgb(30 31 36 / var(--tw-bg-opacity));
 }
@@ -2317,7 +2241,7 @@ video {
   background-color: rgb(235 235 235 / var(--tw-bg-opacity));
 }
 
-.dynamic-secondary:is(.dark *){
+:is(.dark .dynamic-secondary){
   --tw-bg-opacity: 1;
   background-color: rgb(39 41 47 / var(--tw-bg-opacity));
 }
@@ -2327,7 +2251,7 @@ video {
   background-color: rgb(238 241 243 / var(--tw-bg-opacity));
 }
 
-.dynamic-bg:is(.dark *){
+:is(.dark .dynamic-bg){
   --tw-bg-opacity: 1;
   background-color: rgb(23 24 28 / var(--tw-bg-opacity));
 }
@@ -2356,6 +2280,16 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:bg-\[\#177CFF\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 124 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#d32a2a\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(211 42 42 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-blue-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
@@ -2381,14 +2315,9 @@ video {
   background-color: rgb(254 226 226 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-\[\#177CFF\]:hover{
+.hover\:bg-\[\#1070ed\]:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(23 124 255 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#d32a2a\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(211 42 42 / var(--tw-bg-opacity));
+  background-color: rgb(16 112 237 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-700:hover{
@@ -2398,18 +2327,6 @@ video {
 
 .hover\:opacity-100:hover{
   opacity: 1;
-}
-
-.hover\:opacity-\[1\.2\]:hover{
-  opacity: 1.2;
-}
-
-.hover\:opacity-\[1\.3\]:hover{
-  opacity: 1.3;
-}
-
-.hover\:opacity-\[2\]:hover{
-  opacity: 2;
 }
 
 .focus\:outline-none:focus{
@@ -2469,98 +2386,103 @@ video {
   opacity: 0.8;
 }
 
-.dark\:border-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]:is(.dark *){
+:is(.dark .dark\:border-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]){
   border-color: rgba(214,215,216,0.2);
 }
 
-.dark\:border-d-bgc:is(.dark *){
+:is(.dark .dark\:border-d-bgc){
   --tw-border-opacity: 1;
   border-color: rgb(23 24 28 / var(--tw-border-opacity));
 }
 
-.dark\:border-d-text:is(.dark *){
+:is(.dark .dark\:border-d-text){
   --tw-border-opacity: 1;
   border-color: rgb(214 215 216 / var(--tw-border-opacity));
 }
 
-.dark\:border-opacity-20:is(.dark *){
+:is(.dark .dark\:border-opacity-20){
   --tw-border-opacity: 0.2;
 }
 
-.dark\:border-opacity-5:is(.dark *){
+:is(.dark .dark\:border-opacity-5){
   --tw-border-opacity: 0.05;
 }
 
-.dark\:bg-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]:is(.dark *){
+:is(.dark .dark\:bg-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]){
   background-color: rgba(214,215,216,0.2);
 }
 
-.dark\:bg-d-accent:is(.dark *){
+:is(.dark .dark\:bg-d-accent){
   --tw-bg-opacity: 1;
   background-color: rgb(42 134 254 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-d-bgc:is(.dark *){
+:is(.dark .dark\:bg-d-bgc){
   --tw-bg-opacity: 1;
   background-color: rgb(23 24 28 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-d-text:is(.dark *){
+:is(.dark .dark\:bg-d-text){
   --tw-bg-opacity: 1;
   background-color: rgb(214 215 216 / var(--tw-bg-opacity));
 }
 
-.dark\:text-d-accent:is(.dark *){
+:is(.dark .dark\:text-d-accent){
   --tw-text-opacity: 1;
   color: rgb(42 134 254 / var(--tw-text-opacity));
 }
 
-.dark\:text-d-danger:is(.dark *){
+:is(.dark .dark\:text-d-danger){
   --tw-text-opacity: 1;
   color: rgb(255 66 66 / var(--tw-text-opacity));
 }
 
-.dark\:text-d-text:is(.dark *){
+:is(.dark .dark\:text-d-text){
   --tw-text-opacity: 1;
   color: rgb(214 215 216 / var(--tw-text-opacity));
 }
 
-.dark\:text-gray-400:is(.dark *){
+:is(.dark .dark\:text-gray-400){
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.dark\:text-white:is(.dark *){
+:is(.dark .dark\:text-white){
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.dark\:shadow-none:is(.dark *){
+:is(.dark .dark\:shadow-none){
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.dark\:ring-offset-slate-900:is(.dark *){
+:is(.dark .dark\:ring-offset-slate-900){
   --tw-ring-offset-color: #0f172a;
 }
 
-.dark\:hover\:bg-d-secondary:hover:is(.dark *){
+:is(.dark .dark\:hover\:bg-d-secondary:hover){
   --tw-bg-opacity: 1;
   background-color: rgb(39 41 47 / var(--tw-bg-opacity));
 }
 
-.dark\:hover\:bg-gray-700:hover:is(.dark *){
+:is(.dark .dark\:hover\:bg-gray-700:hover){
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
-.dark\:hover\:bg-red-950:hover:is(.dark *){
+:is(.dark .dark\:hover\:bg-red-950:hover){
   --tw-bg-opacity: 1;
   background-color: rgb(69 10 10 / var(--tw-bg-opacity));
 }
 
-.dark\:focus\:ring-offset-gray-800:focus:is(.dark *){
+:is(.dark .dark\:hover\:bg-\[\#1070ed\]:hover){
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 112 237 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:focus\:ring-offset-gray-800:focus){
   --tw-ring-offset-color: #1f2937;
 }
 
@@ -2990,6 +2912,14 @@ video {
 @media (min-width: 1280px){
   .xl\:bottom-\[-85px\]{
     bottom: -85px;
+  }
+
+  .xl\:bottom-\[-95px\]{
+    bottom: -95px;
+  }
+
+  .xl\:bottom-\[-105px\]{
+    bottom: -105px;
   }
 
   .xl\:order-1{
