--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap");
 
 /*
-! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.10 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -34,9 +34,11 @@
 4. Use the user's configured `sans` font-family by default.
 5. Use the user's configured `sans` font-feature-settings by default.
 6. Use the user's configured `sans` font-variation-settings by default.
+7. Disable tap highlights on iOS
 */
 
-html {
+html,
+:host {
   line-height: 1.5;
   /* 1 */
   -webkit-text-size-adjust: 100%;
@@ -46,12 +48,14 @@ html {
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
   font-variation-settings: normal;
   /* 6 */
+  -webkit-tap-highlight-color: transparent;
+  /* 7 */
 }
 
 /*
@@ -123,8 +127,10 @@ strong {
 }
 
 /*
-1. Use the user's configured `mono` font family by default.
-2. Correct the odd `em` font sizing in all browsers.
+1. Use the user's configured `mono` font-family by default.
+2. Use the user's configured `mono` font-feature-settings by default.
+3. Use the user's configured `mono` font-variation-settings by default.
+4. Correct the odd `em` font sizing in all browsers.
 */
 
 code,
@@ -133,8 +139,12 @@ samp,
 pre {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   /* 1 */
-  font-size: 1em;
+  font-feature-settings: normal;
   /* 2 */
+  font-variation-settings: normal;
+  /* 3 */
+  font-size: 1em;
+  /* 4 */
 }
 
 /*
@@ -203,6 +213,8 @@ textarea {
   /* 1 */
   line-height: inherit;
   /* 1 */
+  letter-spacing: inherit;
+  /* 1 */
   color: inherit;
   /* 1 */
   margin: 0;
@@ -226,9 +238,9 @@ select {
 */
 
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+input:where([type='button']),
+input:where([type='reset']),
+input:where([type='submit']) {
   -webkit-appearance: button;
   /* 1 */
   background-color: transparent;
@@ -543,6 +555,10 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+  --tw-contain-size:  ;
+  --tw-contain-layout:  ;
+  --tw-contain-paint:  ;
+  --tw-contain-style:  ;
 }
 
 ::backdrop{
@@ -593,6 +609,10 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+  --tw-contain-size:  ;
+  --tw-contain-layout:  ;
+  --tw-contain-paint:  ;
+  --tw-contain-style:  ;
 }
 
 .container{
@@ -682,7 +702,7 @@ video {
   padding: 0.875rem;
 }
 
-:is(.dark .nav-container){
+.nav-container:is(.dark *){
   --tw-border-opacity: 1;
   border-color: rgb(39 41 47 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
@@ -712,7 +732,7 @@ video {
   color: rgb(42 134 254 / var(--tw-text-opacity));
 }
 
-:is(.dark .nav-brand){
+.nav-brand:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(42 134 254 / var(--tw-text-opacity));
 }
@@ -744,7 +764,7 @@ video {
   background-color: rgb(235 235 235 / var(--tw-bg-opacity));
 }
 
-:is(.dark .nav-icon:hover){
+.nav-icon:hover:is(.dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(39 41 47 / var(--tw-bg-opacity));
 }
@@ -783,7 +803,7 @@ video {
   color: rgb(10 10 18 / var(--tw-text-opacity));
 }
 
-:is(.dark .sidebar-container){
+.sidebar-container:is(.dark *){
   --tw-border-opacity: 1;
   border-color: rgb(39 41 47 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
@@ -826,7 +846,7 @@ video {
   background-color: rgb(235 235 235 / var(--tw-bg-opacity));
 }
 
-:is(.dark .container-sidebar-icon:hover){
+.container-sidebar-icon:hover:is(.dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(39 41 47 / var(--tw-bg-opacity));
 }
@@ -896,7 +916,7 @@ video {
   opacity: 0.2;
 }
 
-:is(.dark .hr){
+.hr:is(.dark *){
   --tw-border-opacity: 1;
   border-color: rgb(214 215 216 / var(--tw-border-opacity));
 }
@@ -1179,10 +1199,6 @@ video {
   height: 4rem;
 }
 
-.h-2{
-  height: 0.5rem;
-}
-
 .h-2\.5{
   height: 0.625rem;
 }
@@ -1279,6 +1295,10 @@ video {
   max-height: 70px;
 }
 
+.min-h-1{
+  min-height: 0.25rem;
+}
+
 .w-1\/2{
   width: 50%;
 }
@@ -1301,10 +1321,6 @@ video {
 
 .w-16{
   width: 4rem;
-}
-
-.w-2{
-  width: 0.5rem;
 }
 
 .w-2\.5{
@@ -1393,6 +1409,14 @@ video {
 
 .w-screen{
   width: 100vw;
+}
+
+.w-\[46px\]{
+  width: 46px;
+}
+
+.w-\[42px\]{
+  width: 42px;
 }
 
 .max-w-7xl{
@@ -1749,6 +1773,61 @@ video {
 .bg-red-800{
   --tw-bg-opacity: 1;
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#17181b\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 24 27 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#222429\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 36 41 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#151518\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 21 24 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#25252b\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 37 43 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#1f1f25\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 31 37 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#1a1a1f\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 26 31 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#212128\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 33 40 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#16161a\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 22 26 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#1d1d22\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 29 34 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#17171c\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 23 28 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#19191e\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(25 25 30 / var(--tw-bg-opacity));
 }
 
 .bg-cover{
@@ -2221,7 +2300,7 @@ video {
   color: rgb(10 10 18 / var(--tw-text-opacity));
 }
 
-:is(.dark .dynamic-text){
+.dynamic-text:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(214 215 216 / var(--tw-text-opacity));
 }
@@ -2231,7 +2310,7 @@ video {
   background-color: rgb(248 248 253 / var(--tw-bg-opacity));
 }
 
-:is(.dark .dynamic-primary){
+.dynamic-primary:is(.dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(30 31 36 / var(--tw-bg-opacity));
 }
@@ -2241,7 +2320,7 @@ video {
   background-color: rgb(235 235 235 / var(--tw-bg-opacity));
 }
 
-:is(.dark .dynamic-secondary){
+.dynamic-secondary:is(.dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(39 41 47 / var(--tw-bg-opacity));
 }
@@ -2251,7 +2330,7 @@ video {
   background-color: rgb(238 241 243 / var(--tw-bg-opacity));
 }
 
-:is(.dark .dynamic-bg){
+.dynamic-bg:is(.dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(23 24 28 / var(--tw-bg-opacity));
 }
@@ -2278,6 +2357,11 @@ video {
 .hover\:rotate-90:hover{
   --tw-rotate: 90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:bg-\[\#1070ed\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 112 237 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#177CFF\]:hover{
@@ -2313,11 +2397,6 @@ video {
 .hover\:bg-red-100:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(254 226 226 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#1070ed\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(16 112 237 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-700:hover{
@@ -2386,103 +2465,103 @@ video {
   opacity: 0.8;
 }
 
-:is(.dark .dark\:border-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]){
+.dark\:border-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]:is(.dark *){
   border-color: rgba(214,215,216,0.2);
 }
 
-:is(.dark .dark\:border-d-bgc){
+.dark\:border-d-bgc:is(.dark *){
   --tw-border-opacity: 1;
   border-color: rgb(23 24 28 / var(--tw-border-opacity));
 }
 
-:is(.dark .dark\:border-d-text){
+.dark\:border-d-text:is(.dark *){
   --tw-border-opacity: 1;
   border-color: rgb(214 215 216 / var(--tw-border-opacity));
 }
 
-:is(.dark .dark\:border-opacity-20){
+.dark\:border-opacity-20:is(.dark *){
   --tw-border-opacity: 0.2;
 }
 
-:is(.dark .dark\:border-opacity-5){
+.dark\:border-opacity-5:is(.dark *){
   --tw-border-opacity: 0.05;
 }
 
-:is(.dark .dark\:bg-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]){
+.dark\:bg-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]:is(.dark *){
   background-color: rgba(214,215,216,0.2);
 }
 
-:is(.dark .dark\:bg-d-accent){
+.dark\:bg-d-accent:is(.dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(42 134 254 / var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:bg-d-bgc){
+.dark\:bg-d-bgc:is(.dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(23 24 28 / var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:bg-d-text){
+.dark\:bg-d-text:is(.dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(214 215 216 / var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:text-d-accent){
+.dark\:text-d-accent:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(42 134 254 / var(--tw-text-opacity));
 }
 
-:is(.dark .dark\:text-d-danger){
+.dark\:text-d-danger:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(255 66 66 / var(--tw-text-opacity));
 }
 
-:is(.dark .dark\:text-d-text){
+.dark\:text-d-text:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(214 215 216 / var(--tw-text-opacity));
 }
 
-:is(.dark .dark\:text-gray-400){
+.dark\:text-gray-400:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-:is(.dark .dark\:text-white){
+.dark\:text-white:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-:is(.dark .dark\:shadow-none){
+.dark\:shadow-none:is(.dark *){
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-:is(.dark .dark\:ring-offset-slate-900){
+.dark\:ring-offset-slate-900:is(.dark *){
   --tw-ring-offset-color: #0f172a;
 }
 
-:is(.dark .dark\:hover\:bg-d-secondary:hover){
-  --tw-bg-opacity: 1;
-  background-color: rgb(39 41 47 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:hover\:bg-gray-700:hover){
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:hover\:bg-red-950:hover){
-  --tw-bg-opacity: 1;
-  background-color: rgb(69 10 10 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:hover\:bg-\[\#1070ed\]:hover){
+.dark\:hover\:bg-\[\#1070ed\]:hover:is(.dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(16 112 237 / var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:focus\:ring-offset-gray-800:focus){
+.dark\:hover\:bg-d-secondary:hover:is(.dark *){
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 41 47 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:bg-gray-700:hover:is(.dark *){
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:bg-red-950:hover:is(.dark *){
+  --tw-bg-opacity: 1;
+  background-color: rgb(69 10 10 / var(--tw-bg-opacity));
+}
+
+.dark\:focus\:ring-offset-gray-800:focus:is(.dark *){
   --tw-ring-offset-color: #1f2937;
 }
 
@@ -2834,6 +2913,10 @@ video {
     width: 100%;
   }
 
+  .lg\:w-\[50px\]{
+    width: 50px;
+  }
+
   .lg\:flex-row{
     flex-direction: row;
   }
@@ -2852,6 +2935,10 @@ video {
 
   .lg\:rounded-xl{
     border-radius: 0.75rem;
+  }
+
+  .lg\:rounded-lg{
+    border-radius: 0.5rem;
   }
 
   .lg\:p-2{
@@ -2910,14 +2997,6 @@ video {
 }
 
 @media (min-width: 1280px){
-  .xl\:bottom-\[-85px\]{
-    bottom: -85px;
-  }
-
-  .xl\:bottom-\[-95px\]{
-    bottom: -95px;
-  }
-
   .xl\:bottom-\[-105px\]{
     bottom: -105px;
   }
@@ -3044,6 +3123,10 @@ video {
 
   .xl\:w-full{
     width: 100%;
+  }
+
+  .xl\:w-24{
+    width: 6rem;
   }
 
   .xl\:items-center{
