--- a/public/style.css
+++ b/public/style.css
@@ -967,6 +967,10 @@ video {
   right: -300px;
 }
 
+.bottom-1{
+  bottom: 0.25rem;
+}
+
 .bottom-\[-88px\]{
   bottom: -88px;
 }
@@ -1003,24 +1007,28 @@ video {
   top: 61px;
 }
 
-.top-3{
-  top: 0.75rem;
-}
-
 .top-2{
   top: 0.5rem;
 }
 
-.top-10{
-  top: 2.5rem;
+.top-3{
+  top: 0.75rem;
 }
 
-.bottom-5{
-  bottom: 1.25rem;
+.top-5{
+  top: 1.25rem;
+}
+
+.top-4{
+  top: 1rem;
 }
 
 .bottom-3{
   bottom: 0.75rem;
+}
+
+.bottom-3\/4{
+  bottom: 75%;
 }
 
 .-z-10{
@@ -1175,28 +1183,16 @@ video {
   margin-top: auto;
 }
 
-.mt-24{
-  margin-top: 6rem;
-}
-
-.mt-20{
-  margin-top: 5rem;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
-}
-
-.mt-7{
-  margin-top: 1.75rem;
-}
-
-.mt-8{
-  margin-top: 2rem;
+.mb-5{
+  margin-bottom: 1.25rem;
 }
 
 .box-border{
   box-sizing: border-box;
+}
+
+.box-content{
+  box-sizing: content-box;
 }
 
 .block{
@@ -1331,56 +1327,8 @@ video {
   height: 100vh;
 }
 
-.h-60{
-  height: 15rem;
-}
-
-.h-48{
-  height: 12rem;
-}
-
-.h-3\/5{
-  height: 60%;
-}
-
-.h-2\/5{
-  height: 40%;
-}
-
-.h-1\/3{
-  height: 33.333333%;
-}
-
-.h-36{
-  height: 9rem;
-}
-
-.h-\[60vh\]{
-  height: 60vh;
-}
-
-.h-\[120px\]{
-  height: 120px;
-}
-
-.h-\[50vh\]{
-  height: 50vh;
-}
-
-.h-\[20px\]{
-  height: 20px;
-}
-
-.h-\[100px\]{
-  height: 100px;
-}
-
-.h-3{
-  height: 0.75rem;
-}
-
-.h-1{
-  height: 0.25rem;
+.h-2{
+  height: 0.5rem;
 }
 
 .max-h-\[70px\]{
@@ -1503,28 +1451,12 @@ video {
   width: 100vw;
 }
 
-.w-3{
-  width: 0.75rem;
-}
-
-.w-1{
-  width: 0.25rem;
-}
-
-.w-48{
-  width: 12rem;
-}
-
 .max-w-7xl{
   max-width: 80rem;
 }
 
 .max-w-screen-md{
   max-width: 768px;
-}
-
-.max-w-screen-xl{
-  max-width: 1280px;
 }
 
 .flex-1{
@@ -1548,8 +1480,13 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-6{
-  --tw-translate-y: -1.5rem;
+.translate-y-1{
+  --tw-translate-y: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-2{
+  --tw-translate-y: 0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1563,28 +1500,18 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-y-1\/2{
-  --tw-translate-y: 50%;
+.-translate-y-1{
+  --tw-translate-y: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-y-3\/4{
-  --tw-translate-y: 75%;
+.translate-y-4{
+  --tw-translate-y: 1rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-y-6{
-  --tw-translate-y: 1.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-3{
-  --tw-translate-y: 0.75rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-3{
-  --tw-translate-y: -0.75rem;
+.-translate-y-4{
+  --tw-translate-y: -1rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1669,6 +1596,10 @@ video {
   align-items: flex-start;
 }
 
+.items-end{
+  align-items: flex-end;
+}
+
 .items-center{
   align-items: center;
 }
@@ -1685,6 +1616,10 @@ video {
   justify-content: space-between;
 }
 
+.justify-items-end{
+  justify-items: end;
+}
+
 .gap-1{
   gap: 0.25rem;
 }
@@ -1695,6 +1630,26 @@ video {
 
 .gap-3{
   gap: 0.75rem;
+}
+
+.gap-5{
+  gap: 1.25rem;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-8{
+  gap: 2rem;
+}
+
+.gap-7{
+  gap: 1.75rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
 }
 
 .gap-x-3{
@@ -1712,8 +1667,16 @@ video {
   place-self: end;
 }
 
+.self-end{
+  align-self: flex-end;
+}
+
 .self-center{
   align-self: center;
+}
+
+.justify-self-end{
+  justify-self: end;
 }
 
 .overflow-hidden{
@@ -1836,11 +1799,6 @@ video {
   border-color: transparent;
 }
 
-.border-gray-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
 .border-opacity-10{
   --tw-border-opacity: 0.1;
 }
@@ -1927,10 +1885,6 @@ video {
 
 .bg-cover{
   background-size: cover;
-}
-
-.bg-contain{
-  background-size: contain;
 }
 
 .object-contain{
@@ -2041,11 +1995,6 @@ video {
   padding-bottom: 10px;
 }
 
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .pb-1{
   padding-bottom: 0.25rem;
 }
@@ -2098,6 +2047,14 @@ video {
   padding-top: 1.25rem;
 }
 
+.pt-3{
+  padding-top: 0.75rem;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -2112,6 +2069,10 @@ video {
 
 .indent-6{
   text-indent: 1.5rem;
+}
+
+.align-baseline{
+  vertical-align: baseline;
 }
 
 .align-middle{
@@ -2199,8 +2160,16 @@ video {
   font-weight: 600;
 }
 
+.font-light{
+  font-weight: 300;
+}
+
 .leading-3{
   line-height: .75rem;
+}
+
+.leading-loose{
+  line-height: 2;
 }
 
 .tracking-tight{
@@ -2271,9 +2240,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-700{
+.text-d-bgc{
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+  color: rgb(23 24 28 / var(--tw-text-opacity));
+}
+
+.text-d-secondary{
+  --tw-text-opacity: 1;
+  color: rgb(39 41 47 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -2812,6 +2786,14 @@ video {
     height: calc(100vh - 73px);
   }
 
+  .md\:h-12{
+    height: 3rem;
+  }
+
+  .md\:h-14{
+    height: 3.5rem;
+  }
+
   .md\:w-12{
     width: 3rem;
   }
@@ -2856,6 +2838,10 @@ video {
     gap: 0px;
   }
 
+  .md\:gap-5{
+    gap: 1.25rem;
+  }
+
   .md\:rounded-xl{
     border-radius: 0.75rem;
   }
@@ -2871,6 +2857,21 @@ video {
   .md\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+
+  .md\:px-5{
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .md\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   .md\:pb-2{
@@ -2990,6 +2991,10 @@ video {
     height: 500px;
   }
 
+  .lg\:h-12{
+    height: 3rem;
+  }
+
   .lg\:w-1\/2{
     width: 50%;
   }
@@ -3074,6 +3079,28 @@ video {
     padding-bottom: 1rem;
   }
 
+  .lg\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .lg\:px-10{
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .lg\:pr-5{
+    padding-right: 1.25rem;
+  }
+
+  .lg\:pr-8{
+    padding-right: 2rem;
+  }
+
+  .lg\:pr-6{
+    padding-right: 1.5rem;
+  }
+
   .lg\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -3097,6 +3124,16 @@ video {
   .lg\:text-lg{
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .lg\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .lg\:blur-\[256px\]{
@@ -3178,6 +3215,10 @@ video {
     margin-top: 73px;
   }
 
+  .xl\:mt-5{
+    margin-top: 1.25rem;
+  }
+
   .xl\:block{
     display: block;
   }
@@ -3204,6 +3245,10 @@ video {
 
   .xl\:h-8{
     height: 2rem;
+  }
+
+  .xl\:h-12{
+    height: 3rem;
   }
 
   .xl\:w-10{
